Add Heroku-24 and ARM support (#33)
- Rewrites the project to use a pre-built JRuby binary. Links to downloads are at https://www.jruby.org/download.
- Adds the heroku-24 base image as a build target
- Re-uses the ARM url format for S3 that was introduced in https://github.com/heroku/docker-heroku-ruby-builder/pull/38. Both the Ruby classic buildpack and CNB are tightly coupled to this format and will attempt to download binaries from S3 with cpu architecture information on heroku-24. Once built and uploaded to S3 there should be no changes needed to the buildpack to acquire support for heroku-24 and ARM due to:
  - https://github.com/heroku/heroku-buildpack-ruby/pull/1439
  - https://github.com/heroku/buildpacks-ruby/pull/284